--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
              
             </main>
     </header>
-  <script src="/script.js"></script>  
+  <script src="script.js"></script>  
 </body>
 </html>
